2001-02-09  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cmail (mhc-cmail-setup): Set mhc-mailer-package value
	early mhc-setup() execution.

	* emacs/mhc-gnus.el (mhc-gnus-setup): Ditto.

	* emacs/mhc-mew.el (mhc-mew-setup): Ditto.

	* emacs/mhc-wl.el (mhc-wl-setup): Ditto.

	* emacs/mhc-header.el (mhc-header-valid-p): New function.

	* emacs/mhc-cvs.el (mhc-cvs/update-dirs-exist): Remove function.
	(mhc-cvs/update-dirs): Don't check 'CVS' directory.
	(mhc-cvs/unknown-file): Check unknown file seem to MHC file. Add
	mhc-log if file is commit.

2001-02-09  INOUE Tomonori <inouetom@brain.is.kyushu-u.ac.jp>

	* emacs/mhc-bm.el (mhc-bm-icon-alist): fix typo.

2001-02-09  Yoshinari Nomura  <nom@quickhack.net>

	* 00usage.jis: Change documents of palm2mhc.

	* experimental/my-meeting2000 (toplevel):
		Add IPv6 localhost to the access list.

	* palm2mhc.in (toplevel): Speak when connected.
	            Change defalt directory for -a.
	            Ether yes or y will do as an answer.

2001-02-06  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem): 1.4/1.6 compliant.

	* ruby-ext/lib/mhc-palm.rb (PilotApptRecord#conv_note): Ditto.

2001-02-03  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-schedule.rb (MhcSchedule::occur_min/max):
	  Sometimes palm makes empty @day - @exception.
	  ex. X-SC-Day: 20000911 !20000911
	  workaround for that problem.

2001-02-01  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cvs.el (mhc-cvs/unknown-file): Treat character when ignore
	case.

	* emacs/mhc-ps.el (mhc-ps): Ditto.
	(mhc-ps, mhc-ps-preview, mhc-ps-print, mhc-ps-save,
	mhc-ps-insert-buffer): Use mhc-current-date-month() instead of
	mhc-current-date().

2001-01-31  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-prefix-map, mhc-mode-menu-spec): Add new keybind
	and new menu.
	(mhc-goto-today): Move to cursol to 1st day of month when not today.